[package]
name = "mock-streamflow"
version = "0.1.0"
description = "Mock Streamflow program for testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_streamflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"